--- a/accounts/templates/accounts/dogprofile.html
+++ b/accounts/templates/accounts/dogprofile.html
@@ -1,51 +1,28 @@
-{% extends 'base.html' %} {% load django_bootstrap5 %} {% load static %} {% block css %}
-<link rel="stylesheet" href="{% static 'css/profile.css' %}" />
+{% extends 'base.html' %} {% load django_bootstrap5 %} {% load static %} {%
+block css %}
+<link rel="stylesheet" href="{% static 'css/dogprofile.css' %}" />
 {% endblock css %} {% block content %}
+
 <!-- MY PAGE -->
 <!-- 프로필 사진이 설정되어 있으면 프로필 사진을 띄움 -->
-<div class="d-flex mt-3">
-  <div>
-    {% if dog.profile %}
-    <img
-      class="d-flex"
-      src="{{ dog.profile.url }}"
-      alt="직접 설정해둔 프로필 사진"
-    />
-    {% else %}
-    <img src="https://dummyimage.com/50x50" alt="기본 프로필 사진" />
-    {% endif %}
-  </div>
-  <p>{{ dog.name }}</p>
-</div>
-<div class="d-flex mt-3">
-  <div>
-    {% if user.dog_set.all %} {% for dog in user.dog_set.all %} {% if
-    dog.dogphoto %}
-    <img
-      class="d-flex"
-      src="{{ dog.dogphoto.url }}"
-      alt="직접 설정해둔 강아지 사진"
-    />
-    {% else %}
-    <img src="https://dummyimage.com/50x50" alt="기본 강아지 프로필 사진" />
-    {% endif %}
-    <p>{{ dog.name }}</p>
-    {% endfor %} {% else %}
-    <p>등록된 강아지 정보가 없어요ㅠㅠ</p>
-    {% endif %}
-  </div>
-</div>
+주인 : {{ dog.user }}
+<br />
+이름 :{{ dog.name }}
+<br />
 
-<!-- 기타 버튼 -->
-<div class="text-end mb-5">
-  <div class="text-end mb-5">
-    <a class="btn btn-primary" href="{% url 'accounts:dogupdate' %}"
-      >강아지 정보 수정</a
-    >
-    <a class="btn btn-primary" href="{% url 'accounts:logout' %}">로그아웃</a>
-    <a class="btn btn-primary" href="{% url 'accounts:index' %}">뒤로가기</a>
-    <a class="btn btn-secondary" href="{% url 'accounts:dogdelete' %}"
-      >강아지 등록 취소</a
-    >
-  </div>
-</div>
+사진 : {% if dog.dogphoto %}
+<img src="{{ dog.dogphoto.url }}" alt="직접 설정해둔 강아지 사진" />
+{% else %}
+<img src="https://dummyimage.com/50x50" alt="기본 강아지 프로필 사진" />
+{% endif %}
+
+<br />
+중성화 여부 : {{ dog.neutered }}
+<br />
+성별 : {{ dog.gender }}
+<br />
+나이 : {{ dog.age }}
+<br />
+성격 : {{ dog.personality }}
+<br />
+크기 : {{ dog.dogtype }} {% endblock content %}
