--- a/static/CSS/walkings.css
+++ b/static/CSS/walkings.css
@@ -170,3 +170,11 @@
   border-width: 0.5px;
   border-color: rgb(223, 223, 223);
 }
+
+#plus-button,
+#minus-button {
+  border-color: #2125296f;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-weight: bold;
+}
