--- a/static/CSS/walkings.css
+++ b/static/CSS/walkings.css
@@ -1,4 +1,4 @@
-/* walkings_main_map_overlay  */
+/* main_map_overlay  */
 
 .wrap {
   position: absolute;
@@ -126,10 +126,7 @@
 
 
 /* walking-form-area */
-.walking-form-area {
-  margin: 2rem;
-  width: 40%;
-}
+.walking-form-area {}
 
 .walking-form {
   border-radius: 0.5rem;
@@ -138,6 +135,7 @@
   border-style: solid;
   border-width: 0.5px;
   border-color: rgb(223, 223, 223);
+  padding: 1rem;
 }
 
 .walking-form-item-label {
