FIX : accounts/강아지 등록 간 오류 수정

--- a/accounts/templates/accounts/dogprofile.html
+++ b/accounts/templates/accounts/dogprofile.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %} {% load django_bootstrap5 %} {% load static %} {%
-block css %}
+{% extends 'base.html' %} {% load django_bootstrap5 %} {% load static %} 
+{% block css %}
 <link rel="stylesheet" href="{% static 'css/dogprofile.css' %}" />
 {% endblock css %} {% block content %}
 
