--- a/reviews/templates/reviews/form.html
+++ b/reviews/templates/reviews/form.html
@@ -1,30 +1,39 @@
+{% extends 'base.html' %}
 {% load django_bootstrap5 %}
-
-
 {% block content %}
 
-<h1>리뷰작성 페이지</h1>
 
 
-<form id="review" method="post" action="" enctype="multipart/form-data">
- 
-    {% csrf_token %}
+    <div class='d-flex form-control ' style='background-color:rgb(252, 248, 237, 0.7); width:30%; height :80%; text-align: center; margin : 0 auto; '>
+        <h3 class='d-flex flex-wrap: wrap'></h3><br>
+    
+        <form id="review" method="post" action="" enctype="multipart/form-data" >
+        
+            {% csrf_token %}
+            <h3 class='d-flex ml-5'>오늘은 어떤일이 있었나요?✍️</h3><br>
 
-    <b>{{review_form.title.label}}</b><br />
-    {{review_form.title}}<br />
+            <div  style='width :100%;'>
+                <label for="review_title" >제목</label>
+                <input id="review_title" class="form-control " type='text' name="title" >
+            </div>
+
+            
+            <div style='width :100%;'>
+                <label for="review_content" >내용</label>
+                <input id="review_content" class="form-control " type='text' name="content" >
+            </div>
+        
 
 
-   <b> {{review_form.content.label}}</b> <br />
-   {{review_form.content}}<br />
+            {{ formset.management_form }}
+            {% for form in formset %}
+            &nbsp; {% bootstrap_form form %} 
+            {% endfor %}
+        
+        
+            {% bootstrap_button button_class="btn btn-warning fw-bolder mb-5" style='color:white; float:right' button_type="submit" content="리뷰 올리기" %}
+        </form>
+    </div>
 
-
-    {{ formset.management_form }}
-    {% for form in formset %}
-        {{ form }}<br />
-    {% endfor %}
- 
- 
-    <input type="submit" name="submit" value="Submit" >
-</form>
 
 {% endblock content %}
