--- a/reviews/templates/reviews/detail.html
+++ b/reviews/templates/reviews/detail.html
@@ -4,32 +4,79 @@
 {% block content %}
 
 {% block css %}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-<link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
 
+<head>
+  {% csrf_token %}
+ 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+  <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+  <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
+
+
+
+
+  <style>
+    .box {
+        width: 150px;
+        height: 150px;
+        border-radius: 70%;
+        overflow: hidden;
+    }
+    #review-content{
+      font-family :'Dongle';
+      font-size:28px;
+    }
+
+    #review-title{
+      font-family :'Nanum Gothic';
+      font-size:30px;
+    }
+
+    #review-comment{
+      font-family :'Dongle';
+      font-size: x-large;
+
+    }
+
+
+    .feed_box {
+        margin: 20px 0;
+        border: solid 1px gray;
+        background-color: white
+    }
+    .review_delete button{
+      width: 20%;
+      margin-top: 0px;
+      border-radius: 50px;
+      padding: 30px 40px;
+      background: #fff;
+      item-align :center;
+      font-size: 35px;
+      margin-left: 10px;
+      display: inline-block;
+      border: 1px solid #ddd;
+      border-style: none;
+      }  
+  
+  </style>
+
+</head>
 
 {% endblock css %}
-<style>
-.review_delete button{
-  width: 20%;
-  margin-top: 0px;
-  border-radius: 50px;
-  padding: 30px 40px;
-  background: #fff;
-  item-align :center;
-  font-size: 35px;
-  margin-left: 10px;
-  display: inline-block;
-  border: 1px solid #ddd;
 
-  }
-</style> 
 
 
 <div class='container center' style='position:absolute; left:15%; top:30%; '>
   <div style="display: flex; justify-content: center; item-align-center" >
-    <div style=" width: 500px; height: 500px">
-      왼쪽화면
+    <div style=" width: 500px; height: 500px" class=''>
+      
       {% if review.image %}
       <div id="carouselExampleControls-{{ review.pk }}" class="carousel slide " data-ride="carousel" style="width: 100% padding-bottom: 100%;">
         <div class="carousel-inner bg-dark"  style='width : 100%; height : 80% ; overflow: hidde' >
@@ -55,49 +102,49 @@
 
       {% endif %}
       {% if request.user == review.user %}
-        <div class='review_delete mt-2 d-flex' >
+        <div class='review_delete mt-2 d-flex ' >
             {% comment %} 요청한 user가 리뷰를 작성한 user일 경우에 수정 및 삭제{% endcomment %}
             <p>
-                <button type="button" class="" style=''>
-                    <a href="{% url 'reviews:update' review.pk %}" style='text-decoration:none; color:white'
-                        class='fw-bolder'><i class="bi bi-pencil-square " style='color : black'></i></a>
-                </button>
+              <button type="button" class="" style=''>
+                <a href="{% url 'reviews:update' review.pk %}" style='text-decoration:none; color:white' class='fw-bolder'><i class="bi bi-pencil-square " style='color : black'></i></a>
+              </button>
             </p>
-            <p class='review_delete'>
-            <form action="{% url 'reviews:delete' review.pk %}" method="POST">
-                {% csrf_token %}
-                <button type="submit" class="" style='color : gray'>
-                  <i class="bi bi-trash"></i>
-                </button>
-            </form>
+            <p class='review_delete '>
+              <form action="{% url 'reviews:delete' review.pk %}" method="POST">
+                  {% csrf_token %}
+                  <button type="submit" class="" style='color : gray'>
+                    <i class="bi bi-trash"></i>
+                  </button>
+              </form>
             </p>
             
         </div>
         {% endif %}
     </div>
     <div style=" width: 300px; height: 1000px " >
-      오른쪽화
+      
 
 
 
 
-      <div style="margin: 0 20px;text-align: left;font-size: 16px " class='mb-2'>
-        <b> <h5 style='text-align:center;'>{{ review.title}} </h5></b>
+      <div id='review-content' style=" font-family: 'Dongle';margin: 0 20px;text-align: left; " class='mb-2'>
+        <b> <span><h5 id='review-title' style='font-family: "Nanum Gothic"; text-align:center;'>{{ review.title}} </h5></span></b>
         <a href="{% url 'accounts:profile' review.user %}" style='color :black;' class='text-decoration-none ' ><img class="profile" src="{{ review.user.profile.url }} " style='border-radius: 100%; height: 40px; weight:40px;'>
-        <b>{{ user.username }}</b></a> {{ review.content}}
+          
+          <b>{{ user.username }}</b></a> {{ review.content}}
       </div>
       <hr>
       {% comment %} 댓글 {% endcomment %}
       <div id="review-content_{{ review.id }}" class='mt-3' style="overflow:scroll; width:350px; height:400px;">
         {% for comment in  review.comment_set.all %}
         
-        <div style="margin: 0 20px;text-align: left;font-size: 14px">
+        <div id='review-comment' style="font-family: 'Dongle';margin: 0 20px;text-align: left;">
           <div class="d-flex align-items-center  ">
             <a href="{% url 'accounts:profile' comment.user %}" style='color :black;' class='text-decoration-none ' ><img class="profile" src="{{ comment.user.profile.url }} " style='border-radius: 100%; height: 40px; weight:40px;'></a>
             <div class="p-0 "><b>{{ comment.user.username }} </b></div> &nbsp;<div class="p-0 "> {{ comment.content}}</div>
           <div class="ms-auto p-0 ">
             {% if request.user.is_authenticated %}
-              <form class="like-form" data-comment-id="{{ comment.pk }}" data-review-id="{{ review.pk }}">
+              <form class="like-form" data-comment-id="{{ comment.pk }}" data-review-id="{{ review.pk }}" >
                 {% csrf_token %}
                 {% if request.user in comment.like_users.all %}
                   <button class="btn border-0 " style="background-color: transparent;" type="submit" id="like-comment-{{ comment.pk }}">
@@ -118,8 +165,8 @@
         <small class="text-muted">
             
           {% comment %} 댓글 시간및 좋아요 {% endcomment %}
-          <d id="review-content" >{{ comment.created_at| naturaltime  }}
-            <i style='color:red' class="bi bi-heart-fill" id="like-count-{{ comment.pk }}"> {{ comment.like_users.all|length }}</i>
+          <p style='font-size:18px;' id="review-content" >{{ comment.created_at| naturaltime  }}
+            <span><i style='color:red ' class="bi bi-chat-heart-fill" id="like-count-{{ comment.pk }}"> {{ comment.like_users.all|length }}</i></span>
             {% if user.is_authenticated and comment.user == request.user %}
             <a href="{% url 'reviews:comment_delete' review.pk comment.pk %}"style="color: gray" class='text-decoration-none '>삭제</a>
             {% endif %}
