--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -4,36 +4,58 @@
 {% load static %}
 {% block content %}
 
-{% block css %}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-<link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-{% endblock css %}
 
 <head>
   {% csrf_token %}
+ 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+  <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&display=swap" rel="stylesheet">
+  
+ 
+
+
+
+
+  <style>
+    .box {
+        width: 150px;
+        height: 150px;
+        border-radius: 70%;
+        overflow: hidden;
+    }
+    #review-content{
+      font-family :'Dongle';
+      font-size:28px;
+    }
+
+    #review-title{
+      font-family :'Nanum Gothic';
+      font-size:42px;
+    }
+
+    #review-comment{
+      font-family :'Dongle';
+      font-size: x-large;
+
+    }
+
+
+    .feed_box {
+        margin: 20px 0;
+        border: solid 1px gray;
+        background-color: white
+    }
+  </style>
+
 </head>
-
-<style>
-  .box {
-      width: 150px;
-      height: 150px;
-      border-radius: 70%;
-      overflow: hidden;
-  }
-
-
-
-  .feed_box {
-      margin: 20px 0;
-      border: solid 1px gray;
-      background-color: white
-  }
-</style>
 {% comment %} 검색기능 {% endcomment %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light " style="position: fixed;width: 100%; z-index: 999">
-  <div class="container-fluid d-flex justify-content-around " style="flex-wrap: nowrap; min-width: 1000px">
+  <div class="container-fluid d-flex justify-content-around mr-3" style="flex-wrap: nowrap; min-width: 1000px">
     
     <form action="{% url 'reviews:index'%}" role='search' id='searchfunc1'>
       <input type="text" id="search-type-01" name='search'  style="width: 400px">
@@ -41,10 +63,13 @@
     </form>
     
 
-    <a href="{% url 'reviews:create' %}"style="color: black" class='text-decoration-none '><i class="bi bi-plus-square" ></i>글쓰기</a>
+    <a href="{% url 'reviews:create' %}"style="color: black" class='text-decoration-none mx-3'><i class="bi bi-plus-square" ></i>글쓰기</a>
+   
+    
     
   </div>
 </nav>
+{% comment %} 모달 {% endcomment %}
 
 
   {% comment %} 리뷰 글 반복 {% endcomment %}
@@ -64,7 +89,7 @@
             <div>
 
             {% comment %} 사진 {% endcomment %}
-            {% if review.image %}
+            {% if review.image.first %}
             <div id="carouselExampleControls-{{ review.pk }}" class="carousel slide " data-ride="carousel" style="width: 100%">
               <div class="carousel-inner bg-dark"  style='width : 100%; height : 300px;'>
                 {% for photo in review.image.all %}
@@ -85,6 +110,8 @@
                 <span class="visually-hidden">Next</span>
               </button>
               </div>
+              
+              
             {% endif %}
 
           </div>
@@ -108,25 +135,27 @@
             </form>
             {% endif %}
           </div>
-          <div style="margin: 0 20px;text-align: left;font-size: 14px"> <b> {{ review.like_users.count }}명</b>이
-            좋아합니다.
-          </div>
+         
         </div>
       {% comment %} 제목 및 글 내용 {% endcomment %}
-      <div style="margin: 0 20px;text-align: left;font-size: 16px " class='mb-2'>
-        <b> <h5>{{ review.title|truncatechars:10 }} </h5></b>
+      <div id='review-content' style="margin: 0 20px;text-align: left;  font-family: 'Dongle';" class='mb-2'>
+        <b> <span><h5 id='review-title 'style="font-family: 'Nanum Gothic';">{{ review.title|truncatechars:10 }} </h5></span></b>
         <b>{{ user.username }}</b> {{ review.content|truncatechars:15 }}
       </div>
-      <small > <a style='color :black;' class='text-decoration-none ' href="{% url 'reviews:detail' review.pk %}">댓글 모두 보기</a> </small>
+      
       {% comment %} 댓글 {% endcomment %}
           <div id="review-content_{{ review.id }}" class='mt-3'>
             {% for comment in  review.comment_set.all %}
             {% if forloop.counter < 5  %}
-            <div style="margin: 0 20px;text-align: left;font-size: 14px">
+            <div id='review-comment'style="margin: 0 20px;text-align: left;font-size: 14px font-family: 'Dongle';">
               <b>{{ comment.user.username }} </b> {{ comment.content|truncatechars:20 }}</div>
-              {% else %}
-                    {% endif %}
+           
+           
+
+
+            {% endif %}
             {% endfor %}
+            <small > <a  style='color :black;' class='text-decoration-none ' href="{% url 'reviews:detail' review.pk %}">{{ review.comment_set.count }} 댓글 모두 보기</a> </small>
             
           </div>
           
@@ -157,7 +186,6 @@
     </aside>  
       
 </div>
-
 
 
 </div>
