FIX : schedules_calendar navbar 수정

--- a/schedules/templates/schedules/calendar.html
+++ b/schedules/templates/schedules/calendar.html
@@ -60,6 +60,9 @@
             <a class="nav-link" href="{% url 'walkings:index' %}">산책나가기</a>
           </li>
           <li class="nav-item me-4 nav1-text">
+            <a class="nav-link" href="{% url 'info:place' %}">애견동반장소</a>
+          </li>
+          <li class="nav-item me-4 nav1-text">
             <a class="nav-link" href="{% url 'info:hospital' %}">병원찾기</a>
           </li>
           <li class="nav-item me-4 nav1-text">
