--- a/reviews/templates/reviews/detail.html
+++ b/reviews/templates/reviews/detail.html
@@ -129,9 +129,9 @@
 
       <div id='review-content' style=" font-family: 'Dongle';margin: 0 20px;text-align: left; " class='mb-2'>
         <b> <span><h5 id='review-title' style='font-family: "Nanum Gothic"; text-align:center;'>{{ review.title}} </h5></span></b>
-        <a href="{% url 'accounts:profile' review.user %}" style='color :black;' class='text-decoration-none ' ><img class="profile" src="{{ review.user.profile.url }} " style='border-radius: 100%; height: 40px; weight:40px;'>
+        <a href="{% url 'accounts:profile' review.user %}" style='color :black;' class='text-decoration-none ' ><img class="profile" src="{% if review.user.profile %}{{ review.user.profile.url }}{% else %}https://dummyimage.com/40x40{% endif %}" style='border-radius: 100%; height: 40px; width:40px;'>
           
-          <b>{{ user.username }}</b></a> {{ review.content}}
+          <span style="font-weight:bold; font-size:18px">{{ user.username }}</span></a> {{ review.content}}
       </div>
       <hr>
       {% comment %} 댓글 {% endcomment %}
@@ -140,8 +140,8 @@
         
         <div id='review-comment' style="font-family: 'Dongle';margin: 0 20px;text-align: left;">
           <div class="d-flex align-items-center  ">
-            <a href="{% url 'accounts:profile' comment.user %}" style='color :black;' class='text-decoration-none ' ><img class="profile" src="{{ comment.user.profile.url }} " style='border-radius: 100%; height: 40px; weight:40px;'></a>
-            <div class="p-0 "><b>{{ comment.user.username }} </b></div> &nbsp;<div class="p-0 "> {{ comment.content}}</div>
+            <a href="{% url 'accounts:profile' comment.user %}" style='color :black;' class='text-decoration-none ' ><img class="profile" src="{% if comment.user.profile %}{{ comment.user.profile.url }}{% else %}https://dummyimage.com/40x40{% endif %}" style='border-radius: 100%; height: 40px; weight:40px;'></a>
+            <div class="p-0" ><span style="font-weight:bold; font-size:18px;">&nbsp;{{ comment.user.username }} </span></div> &nbsp;<div class="p-0 " style="font-size:16px"> {{ comment.content}}</div>
           <div class="ms-auto p-0 ">
             {% if request.user.is_authenticated %}
               <form class="like-form" data-comment-id="{{ comment.pk }}" data-review-id="{{ review.pk }}" >
